compiler/tests/success/variables.frx
i32 main()
{
    mut i32 a;
    i32 b = 5;
    a = b - 5;

    return a;
}
