compiler/tests/fail/ambiguous_local_var.frx
i32 main()
{
    i32 var = -1;
    i32 var = -1;

    return var;
}
